--- a/CodexNaturalis/src/main/resources/it.polimi.ingsw.gui/CreateGameState.fxml
+++ b/CodexNaturalis/src/main/resources/it.polimi.ingsw.gui/CreateGameState.fxml
@@ -5,9 +5,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import java.lang.Integer?>
-<AnchorPane prefHeight="300.0" prefWidth="400.0" styleClass="background" stylesheets="@../styles.css"
-            xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="it.polimi.ingsw.gui.CreateGameStateGUI">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@../styles.css"
+            xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
 
     <padding>
         <Insets bottom="20" left="20" right="20" top="20"/>
@@ -15,7 +14,8 @@
 
     <Label alignment="CENTER" styleClass="title-label" text="Create New Game 🎮" AnchorPane.leftAnchor="20.0"
            AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0"/>
-    <Label styleClass="normal-label" text="Select number of players (2-4):" AnchorPane.leftAnchor="20"
+    <Label fx:id="feedbackLabel" styleClass="normal-label" text="Select number of players (2-4):"
+           AnchorPane.leftAnchor="20"
            AnchorPane.rightAnchor="20" AnchorPane.topAnchor="60"/>
     <ChoiceBox fx:id="playerChoiceBox" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20"
                AnchorPane.topAnchor="100">
