Added Main Game scene

--- a/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
@@ -5,14 +5,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      spacing="10" alignment="CENTER">
+<VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" spacing="10" stylesheets="@../styles.css"
+      xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <padding>
-        <Insets top="10" right="10" bottom="10" left="10"/>
+        <Insets bottom="10" left="10" right="10" top="10"/>
     </padding>
-    <Label text="Choose a Color" style="-fx-font-size: 20px;"/>
+    <Label style="-fx-font-size: 20px;" text="Choose a Color"/>
     <ListView fx:id="colorListView" prefHeight="200.0" prefWidth="200.0"/>
-    <Button fx:id="selectColorButton" text="Select Color" onAction="#handleSelectColor"/>
+    <Button fx:id="selectColorButton" onAction="#handleSelectColor" text="Select Color"/>
     <Label fx:id="messageLabel" style="-fx-text-fill: red;"/>
 </VBox>
