--- a/CodexNaturalis/src/main/resources/fxml/CreateGameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/CreateGameState.fxml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.Integer?>
 <?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import java.lang.Integer?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@../styles.css"
-            xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.layout.AnchorPane?>
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
 
     <padding>
-        <Insets bottom="20" left="20" right="20" top="20"/>
+        <Insets bottom="20" left="20" right="20" top="20" />
     </padding>
 
-    <Label alignment="CENTER" styleClass="title-label" text="Create New Game 🎮" AnchorPane.leftAnchor="20.0"
-           AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0"/>
-    <Label fx:id="feedbackLabel" styleClass="normal-label" text="Select number of players (2-4):"
-           AnchorPane.leftAnchor="20"
-           AnchorPane.rightAnchor="20" AnchorPane.topAnchor="60"/>
-    <ChoiceBox fx:id="playerChoiceBox" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20"
-               AnchorPane.topAnchor="100">
+    <Label alignment="CENTER" styleClass="title-label" text="Create New Game 🎮" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
+    <Label fx:id="feedbackLabel" styleClass="normal-label" text="Select number of players (2-4):" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="60" />
+    <ChoiceBox fx:id="playerChoiceBox" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="100">
         <tooltip>
-            <Tooltip text="Choose how many players will be in the game"/>
+            <Tooltip text="Choose how many players will be in the game" />
         </tooltip>
         <items>
             <FXCollections fx:factory="observableArrayList">
-                <Integer fx:value="2"/>
-                <Integer fx:value="3"/>
-                <Integer fx:value="4"/>
+                <Integer fx:value="2" />
+                <Integer fx:value="3" />
+                <Integer fx:value="4" />
             </FXCollections>
         </items>
     </ChoiceBox>
-    <Button onAction="#handleCreateGame" styleClass="primary-button" text="Create Game" AnchorPane.leftAnchor="20"
-            AnchorPane.rightAnchor="20" AnchorPane.topAnchor="140">
+    <Button onAction="#handleCreateGame" styleClass="primary-button" text="Create Game" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="140">
     </Button>
+   <Button alignment="TOP_CENTER" layoutX="40.0" layoutY="325.0" onAction="#handleBack" styleClass="primary-button" text="Back" textFill="WHITE" />
+
 </AnchorPane>
