--- a/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 <VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" spacing="10" stylesheets="@../styles.css"
+      fx:controller="it.polimi.ingsw.gui.Controller.ColorSelectionController"
       xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <padding>
         <Insets bottom="10" left="10" right="10" top="10"/>
