--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -4,8 +4,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <AnchorPane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21"
-            xmlns:fx="http://javafx.com/fxml/1">
-    <ImageView fx:id="boardImage" fitHeight="453.0" fitWidth="257.0" layoutX="7.0" layoutY="8.0">
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="it.polimi.ingsw.gui.Controller.GameController">
+    <ImageView fitHeight="453.0" fitWidth="257.0" layoutX="7.0" layoutY="8.0">
         <Image url="@../Images/Board.jpg"/>
     </ImageView>
     <GridPane fx:id="playerDesk" layoutX="230.0" layoutY="483.0" prefHeight="317.0" prefWidth="570.0">
