--- a/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-      spacing="20" alignment="CENTER">
+      spacing="20" alignment="CENTER"
+      fx:controller="it.polimi.ingsw.gui.Controller.InitializeStarterCardController">
     <padding>
         <Insets bottom="20" left="20" right="20" top="20"/>
     </padding>
