--- a/CodexNaturalis/src/main/resources/fxml/ObjectiveCardSelection.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/ObjectiveCardSelection.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
+      fx:controller="it.polimi.ingsw.gui.Controller.ObjectiveCardSelectionController"
       prefHeight="430.0" prefWidth="600.0" spacing="10" alignment="CENTER">
     <HBox prefHeight="400.0" prefWidth="600.0" spacing="50" alignment="CENTER">
         <padding>
