--- a/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
@@ -1,17 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="it.polimi.ingsw.gui.Controller.MainMenuStateController"
->
-    <Label fx:id="welcomeLabel" layoutX="202.0" layoutY="50.0" prefHeight="26.0" prefWidth="199.0"
-           text="Welcome to Codex Naturalis"/>
-    <TextField fx:id="usernameField" layoutX="202.0" layoutY="95.0" prefHeight="26.0" prefWidth="199.0"
-               promptText="Enter your username here"/>
-    <Button fx:id="playButton" layoutX="274.0" layoutY="188.0" mnemonicParsing="false" text="Play"
-            onAction="#handlePlayButton"/>
-    <Label fx:id="errorLabel" layoutX="202.0" layoutY="140.0" prefHeight="26.0" prefWidth="199.0" textFill="red"/>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fff5b3;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.MainMenuStateController">
+    <TextField fx:id="usernameField" layoutX="180.0" layoutY="291.0" prefHeight="19.0" prefWidth="231.0" promptText="Enter your username here" />
+    <Button fx:id="playButton" layoutX="280.0" layoutY="327.0" mnemonicParsing="false" onAction="#handlePlayButton" style="-fx-background-color: #a6f84b;" text="Play">
+      <font>
+         <Font name="Book Antiqua" size="12.0" />
+      </font></Button>
+    <Label fx:id="errorLabel" layoutX="202.0" layoutY="140.0" prefHeight="26.0" prefWidth="199.0" textFill="red" />
+   <ImageView fitHeight="235.0" fitWidth="251.0" layoutX="170.0" layoutY="36.0" pickOnBounds="true" smooth="false">
+      <image>
+         <Image url="@../Images/LogoCodexNaturalis.jpg" />
+      </image>
+   </ImageView>
+   <Label layoutX="180.0" layoutY="256.0" text="Before playing, choose a username">
+      <font>
+         <Font name="Book Antiqua" size="15.0" />
+      </font>
+   </Label>
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="401.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+      <image>
+         <Image url="@../Images/CN_Decoration1.jpg" />
+      </image>
+   </ImageView>
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@../Images/CN_Decoration1.jpg" />
+      </image>
+   </ImageView>
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+      <image>
+         <Image url="@../Images/CN_Decoration1.jpg" />
+      </image>
+      <rotationAxis>
+         <Point3D x="90.0" z="1.0" />
+      </rotationAxis>
+   </ImageView>
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="401.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+      <image>
+         <Image url="@../Images/CN_Decoration1.jpg" />
+      </image>
+      <rotationAxis>
+         <Point3D y="90.0" z="1.0" />
+      </rotationAxis>
+   </ImageView>
 </AnchorPane>
