--- a/CodexNaturalis/src/main/resources/styles.css
+++ b/CodexNaturalis/src/main/resources/styles.css
@@ -23,3 +23,19 @@
 .primary-button:hover {
     -fx-background-color: #005fa3;
 }
+
+.selected-card {
+    -fx-border-color: blue;
+    -fx-border-width: 2px;
+    -fx-border-style: solid;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 255, 0.8), 10, 0, 0, 0);
+}
+
+.placeholder {
+    -fx-opacity: 0.5;
+    -fx-background-color: gray;
+    -fx-border-color: black;
+    -fx-border-width: 1px;
+    -fx-border-style: dashed;
+}
+
