Used CardView for common objective cards and starter Card

--- a/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
@@ -2,27 +2,24 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-      spacing="20" alignment="CENTER"
+<VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" spacing="20" xmlns="http://javafx.com/javafx/21"
+      xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="it.polimi.ingsw.gui.Controller.InitializeStarterCardController">
     <padding>
         <Insets bottom="20" left="20" right="20" top="20"/>
     </padding>
 
-    <Label text="Play Your Starter Card:" style="-fx-font-size: 16px;"/>
-    <HBox spacing="20" alignment="CENTER">
-        <VBox spacing="10" alignment="CENTER">
+    <Label style="-fx-font-size: 16px;" text="Play Your Starter Card:"/>
+    <HBox alignment="CENTER" spacing="20">
+        <VBox fx:id="frontCardContainer" alignment="CENTER" spacing="10">
             <Label text="Front:"/>
-            <ImageView fx:id="frontImageView" fitWidth="100" fitHeight="150" preserveRatio="true"/>
-            <Button fx:id="playFrontButton" text="Play Front" onAction="#handlePlayFront"/>
+            <Button fx:id="playFrontButton" onAction="#handlePlayFront" text="Play Front"/>
         </VBox>
-        <VBox spacing="10" alignment="CENTER">
+        <VBox fx:id="backCardContainer" alignment="CENTER" spacing="10">
             <Label text="Back:"/>
-            <ImageView fx:id="backImageView" fitWidth="100" fitHeight="150" preserveRatio="true"/>
-            <Button fx:id="playBackButton" text="Play Back" onAction="#handlePlayBack"/>
+            <Button fx:id="playBackButton" onAction="#handlePlayBack" text="Play Back"/>
         </VBox>
     </HBox>
 </VBox>
