--- a/CodexNaturalis/src/main/resources/fxml/ObjectiveCardSelection.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/ObjectiveCardSelection.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
@@ -13,12 +12,10 @@
         <padding>
             <Insets bottom="20" left="20" right="20" top="20"/>
         </padding>
-        <VBox spacing="10" alignment="CENTER">
-            <ImageView fx:id="card1ImageView" fitWidth="200" fitHeight="300" preserveRatio="true"/>
+        <VBox fx:id="card1Container"  spacing="10" alignment="CENTER">
             <Button text="Choose This Card" onAction="#handleSelectCard1"/>
         </VBox>
-        <VBox spacing="10" alignment="CENTER">
-            <ImageView fx:id="card2ImageView" fitWidth="200" fitHeight="300" preserveRatio="true"/>
+        <VBox fx:id="card2Container" spacing="10" alignment="CENTER">
             <Button text="Choose This Card" onAction="#handleSelectCard2"/>
         </VBox>
     </HBox>
