Improved card alignment in GameState . Corrected Starter card visualisation.

--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -9,14 +9,9 @@
         <Image url="@../Images/Board.jpg"/>
     </ImageView>
     <AnchorPane fx:id="gameBoardContainer" layoutX="216.0" layoutY="461.0" prefHeight="317.0" prefWidth="570.0"/>
-    <!-- Cards will be added dynamically here -->
-    <StackPane fx:id="objectiveCard1" layoutX="340.0" layoutY="38.0"/>
-    <StackPane fx:id="objectiveCard2" layoutX="513.0" layoutY="38.0"/>
-    <StackPane fx:id="visibleCardDeck1Card1" layoutX="433.0" layoutY="152.0"/>
-    <StackPane fx:id="visibleCardDeck1Card2" layoutX="593.0" layoutY="152.0"/>
-    <StackPane fx:id="visibleCardDeck2Card1" layoutX="433.0" layoutY="260.0"/>
-    <StackPane fx:id="visibleCardDeck2Card2" layoutX="593.0" layoutY="260.0"/>
-    <StackPane fx:id="usableCardDeck1Back" layoutX="273.0" layoutY="152.0"/>
-    <StackPane fx:id="usableCardDeck2Back" layoutX="273.0" layoutY="260.0"/>
-    <VBox fx:id="playerHandBox" layoutX="25.0" layoutY="469.0"/>
+
+    <HBox fx:id="objectiveCardsContainer" layoutX="300.0" layoutY="24.0" spacing="10"/>
+    <HBox fx:id="resourceDeck" layoutX="300.0" layoutY="152.0" spacing="10"/>
+    <HBox fx:id="goldenDeck" layoutX="300.0" layoutY="280.0" spacing="10"/>
+    <VBox fx:id="playerHandBox" layoutX="25.0" layoutY="469.0" spacing="10"/>
 </AnchorPane>
