--- a/CodexNaturalis/src/main/resources/fxml/LobbyMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/LobbyMenuState.fxml
@@ -1,23 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/21"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="it.polimi.ingsw.gui.Controller.LobbyMenuController">
 
-    <Label layoutX="234.0" layoutY="37.0" style="-fx-font-size: 24px; -fx-font-family: 'Arial'; -fx-text-fill: #333333;"
-           text="Lobby Menu"/>
-    <Label layoutX="205.0" layoutY="83.0" prefWidth="190.0"
-           style="-fx-font-size: 16px; -fx-font-family: 'Arial'; -fx-text-fill: #555555;"
-           text="Please select an option:"/>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fff5b3;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.LobbyMenuController">
 
-    <Button onAction="#handleCreateGame" layoutX="200.0" layoutY="132.0" prefHeight="40" prefWidth="200"
-            style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-family: 'Arial'; -fx-font-size: 14px;"
-            text="Create a new game"/>
-    <Button onAction="#handleJoinGame" layoutX="201.0" layoutY="200.0" prefHeight="40" prefWidth="200"
-            style="-fx-background-color: #1E88E5; -fx-text-fill: white; -fx-font-family: 'Arial'; -fx-font-size: 14px;"
-            text="Join a game "/>
+    <Label layoutX="215.0" layoutY="71.0" prefHeight="75.0" prefWidth="176.0" style="-fx-font-size: 30px; -fx-font-family: 'Book Antiqua'; -fx-text-fill: #333333;" text="Lobby Menu" textAlignment="JUSTIFY" />
+    <Label layoutX="218.0" layoutY="146.0" prefHeight="21.0" prefWidth="165.0" style="-fx-font-size: 16px; -fx-font-family: 'Book Antiqua'; -fx-text-fill: #555555;" text="Please select an option:" />
+
+    <Button layoutX="200.0" layoutY="192.0" onAction="#handleCreateGame" prefHeight="40" prefWidth="200" style="-fx-background-color: #a2ecbb; -fx-text-fill: black; -fx-font-family: 'Book Antiqua'; -fx-font-size: 14px;" text="Create a new game" />
+    <Button layoutX="203.0" layoutY="252.0" onAction="#handleJoinGame" prefHeight="40" prefWidth="200" style="-fx-background-color: #a6f84b; -fx-text-fill: black; -fx-font-family: 'Book Antiqua'; -fx-font-size: 14px;" text="Join a game " />
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@../Images/CN_Decoration1.jpg" />
+      </image>
+   </ImageView>
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+      <image>
+         <Image url="@../Images/CN_Decoration1.jpg" />
+      </image>
+      <rotationAxis>
+         <Point3D x="90.0" z="1.0" />
+      </rotationAxis>
+   </ImageView>
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="403.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+      <image>
+         <Image url="@../Images/CN_Decoration1.jpg" />
+      </image>
+   </ImageView>
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="403.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+      <image>
+         <Image url="@../Images/CN_Decoration1.jpg" />
+      </image>
+      <rotationAxis>
+         <Point3D y="90.0" z="1.0" />
+      </rotationAxis>
+   </ImageView>
 </AnchorPane>
