--- a/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
@@ -15,8 +15,11 @@
       <font>
          <Font name="Book Antiqua" size="12.0" />
       </font></Button>
-    <Label fx:id="errorLabel" layoutX="202.0" layoutY="140.0" prefHeight="26.0" prefWidth="199.0" textFill="red" />
-   <ImageView fitHeight="235.0" fitWidth="251.0" layoutX="170.0" layoutY="36.0" pickOnBounds="true" smooth="false">
+    <Label fx:id="errorLabel" layoutX="180.0" layoutY="230.0" prefHeight="26.0" prefWidth="231.0" textAlignment="JUSTIFY" textFill="red">
+      <font>
+         <Font size="14.0" />
+      </font></Label>
+   <ImageView fitHeight="235.0" fitWidth="251.0" layoutX="170.0" layoutY="14.0" pickOnBounds="true" smooth="false">
       <image>
          <Image url="@../Images/LogoCodexNaturalis.jpg" />
       </image>
