--- a/CodexNaturalis/src/main/resources/styles.css
+++ b/CodexNaturalis/src/main/resources/styles.css
@@ -4,18 +4,18 @@
 
 .title-label {
     -fx-font-size: 20px;
-    -fx-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    -fx-font-family: 'Book Antiqua';
 }
 
 .normal-label {
     -fx-font-size: 14px;
-    -fx-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    -fx-font-family: 'Book Antiqua';
 }
 
 .primary-button {
-    -fx-background-color: #0077cc;
+    -fx-background-color: #a2ecbb;
     -fx-text-fill: white;
-    -fx-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    -fx-font-family: 'Book Antiqua';
     -fx-font-size: 14px;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.8), 10, 0, 0, 0);
 }
@@ -25,7 +25,7 @@
 }
 
 .selected-card {
-    -fx-border-color: blue;
+    -fx-border-color: #00d3ff;
     -fx-border-width: 2px;
     -fx-border-style: solid;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 255, 0.8), 10, 0, 0, 0);
