--- a/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
@@ -1,58 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Point3D?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
+<AnchorPane styleClass="scene" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/21"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.MainMenuStateController">
+    <StackPane styleClass="scene">
+        <VBox alignment="CENTER" spacing="10">
+            <ImageView fitHeight="235.0" fitWidth="251.0" pickOnBounds="true" smooth="false">
+                <Image url="@../Images/LogoCodexNaturalis.jpg"/>
+                <VBox.margin>
+                    <Insets top="-100"/> <!-- Negative margin to move the image a bit higher than center -->
+                </VBox.margin>
+            </ImageView>
+            <Label text="Before playing, choose a username">
+                <font>
+                    <Font name="Book Antiqua" size="15.0"/>
+                </font>
+            </Label>
+            <TextField fx:id="usernameField" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="19.0"
+                       prefWidth="231.0" promptText="Enter your username here"/>
+            <Label fx:id="errorLabel" prefHeight="26.0" prefWidth="231.0" textAlignment="JUSTIFY" textFill="red">
+                <font>
+                    <Font size="14.0"/>
+                </font>
+            </Label>
+            <Button fx:id="playButton" onAction="#handlePlayButton"
+                    styleClass="primary-button" text="Play"/>
+        </VBox>
+    </StackPane>
+    <!-- Top-left Corner -->
+    <ImageView rotate="180" scaleX="-1" styleClass="corner-image" AnchorPane.leftAnchor="0" AnchorPane.topAnchor="0">
+    </ImageView>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fff5b3;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.MainMenuStateController">
-    <TextField fx:id="usernameField" layoutX="180.0" layoutY="291.0" prefHeight="19.0" prefWidth="231.0" promptText="Enter your username here" />
-    <Button fx:id="playButton" layoutX="280.0" layoutY="327.0" mnemonicParsing="false" onAction="#handlePlayButton" style="-fx-background-color: #a6f84b;" text="Play">
-      <font>
-         <Font name="Book Antiqua" size="12.0" />
-      </font></Button>
-    <Label fx:id="errorLabel" layoutX="180.0" layoutY="230.0" prefHeight="26.0" prefWidth="231.0" textAlignment="JUSTIFY" textFill="red">
-      <font>
-         <Font size="14.0" />
-      </font></Label>
-   <ImageView fitHeight="235.0" fitWidth="251.0" layoutX="170.0" layoutY="14.0" pickOnBounds="true" smooth="false">
-      <image>
-         <Image url="@../Images/LogoCodexNaturalis.jpg" />
-      </image>
-   </ImageView>
-   <Label layoutX="180.0" layoutY="256.0" text="Before playing, choose a username">
-      <font>
-         <Font name="Book Antiqua" size="15.0" />
-      </font>
-   </Label>
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="401.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-      <image>
-         <Image url="@../Images/CN_Decoration1.jpg" />
-      </image>
-   </ImageView>
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true">
-      <image>
-         <Image url="@../Images/CN_Decoration1.jpg" />
-      </image>
-   </ImageView>
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-      <image>
-         <Image url="@../Images/CN_Decoration1.jpg" />
-      </image>
-      <rotationAxis>
-         <Point3D x="90.0" z="1.0" />
-      </rotationAxis>
-   </ImageView>
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="401.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-      <image>
-         <Image url="@../Images/CN_Decoration1.jpg" />
-      </image>
-      <rotationAxis>
-         <Point3D y="90.0" z="1.0" />
-      </rotationAxis>
-   </ImageView>
+    <!-- Top-Right Corner -->
+    <ImageView rotate="180" styleClass="corner-image" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
+    </ImageView>
+
+    <!-- Bottom-Left Corner -->
+    <ImageView styleClass="corner-image" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0">
+    </ImageView>
+
+    <!-- Bottom-Right Corner -->
+    <ImageView scaleX="-1" styleClass="corner-image" AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0">
+    </ImageView>
 </AnchorPane>
