--- a/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox alignment="CENTER" spacing="20" styleClass="scene" stylesheets="@../styles.css"
+<VBox alignment="CENTER" spacing="20" styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css"
       xmlns="http://javafx.com/javafx/8.0.171"
       xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="it.polimi.ingsw.gui.Controller.InitializeStarterCardController">
