--- a/CodexNaturalis/src/main/resources/fxml/LobbyMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/LobbyMenuState.fxml
@@ -1,54 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane styleClass="scene"
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.*?>
+<AnchorPane styleClass="scene-dimensions,scene-background"
             xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
             stylesheets="@../styles.css"
             fx:controller="it.polimi.ingsw.gui.Controller.LobbyMenuController">
+    <StackPane styleClass="scene-dimensions,scene-background">
+        <VBox alignment="CENTER" spacing="10">
+            <Label prefHeight="75.0" prefWidth="176.0"
+                   style="-fx-font-size: 30px; -fx-font-family: 'Book Antiqua'; -fx-text-fill: #333333;"
+                   text="Lobby Menu"
+                   textAlignment="JUSTIFY"/>
+            <Label prefHeight="21.0" prefWidth="165.0"
+                   style="-fx-font-size: 16px; -fx-font-family: 'Book Antiqua'; -fx-text-fill: #555555;"
+                   text="Please select an option:"/>
 
-    <Label layoutX="215.0" layoutY="71.0" prefHeight="75.0" prefWidth="176.0"
-           style="-fx-font-size: 30px; -fx-font-family: 'Book Antiqua'; -fx-text-fill: #333333;" text="Lobby Menu"
-           textAlignment="JUSTIFY"/>
-    <Label layoutX="218.0" layoutY="146.0" prefHeight="21.0" prefWidth="165.0"
-           style="-fx-font-size: 16px; -fx-font-family: 'Book Antiqua'; -fx-text-fill: #555555;"
-           text="Please select an option:"/>
+            <Button onAction="#handleCreateGame" styleClass="primary-button" style="-fx-background-color: #a2ecbb;"
+                    text="Create a new game"/>
+            <Button onAction="#handleJoinGame" styleClass="primary-button" style="-fx-background-color: #a6f84b;"
+                    text="Join a game "/>
+        </VBox>
+    </StackPane>
+    <!-- Top-left Corner -->
+    <ImageView rotate="180" scaleX="-1" styleClass="corner-image" AnchorPane.leftAnchor="0" AnchorPane.topAnchor="0">
+    </ImageView>
 
-    <Button layoutX="200.0" layoutY="192.0" onAction="#handleCreateGame" prefHeight="40" prefWidth="200"
-            style="-fx-background-color: #a2ecbb; -fx-text-fill: black; -fx-font-family: 'Book Antiqua'; -fx-font-size: 14px;"
-            text="Create a new game"/>
-    <Button layoutX="203.0" layoutY="252.0" onAction="#handleJoinGame" prefHeight="40" prefWidth="200"
-            style="-fx-background-color: #a6f84b; -fx-text-fill: black; -fx-font-family: 'Book Antiqua'; -fx-font-size: 14px;"
-            text="Join a game "/>
-    <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true">
-        <image>
-            <Image url="@../Images/CN_Decoration1.jpg"/>
-        </image>
+    <!-- Top-Right Corner -->
+    <ImageView rotate="180" styleClass="corner-image" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
     </ImageView>
-    <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-        <image>
-            <Image url="@../Images/CN_Decoration1.jpg"/>
-        </image>
-        <rotationAxis>
-            <Point3D x="90.0" z="1.0"/>
-        </rotationAxis>
+
+    <!-- Bottom-Left Corner -->
+    <ImageView styleClass="corner-image" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0">
     </ImageView>
-    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="403.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true"
-               rotate="180.0">
-        <image>
-            <Image url="@../Images/CN_Decoration1.jpg"/>
-        </image>
-    </ImageView>
-    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="403.0" layoutY="304.0" pickOnBounds="true"
-               preserveRatio="true" rotate="180.0">
-        <image>
-            <Image url="@../Images/CN_Decoration1.jpg"/>
-        </image>
-        <rotationAxis>
-            <Point3D y="90.0" z="1.0"/>
-        </rotationAxis>
+
+    <!-- Bottom-Right Corner -->
+    <ImageView scaleX="-1" styleClass="corner-image" AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0">
     </ImageView>
 </AnchorPane>
