--- a/CodexNaturalis/src/main/resources/fxml/ObjectiveCardSelection.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/ObjectiveCardSelection.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox styleClass="scene" alignment="CENTER" spacing="10" xmlns="http://javafx.com/javafx/8.0.171"
+<VBox styleClass="scene-dimensions,scene-background" alignment="CENTER" spacing="10" xmlns="http://javafx.com/javafx/8.0.171"
       xmlns:fx="http://javafx.com/fxml/1" stylesheets="@../styles.css"
       fx:controller="it.polimi.ingsw.gui.Controller.ObjectiveCardSelectionController">
     <HBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" spacing="50" style="-fx-background-color: #fffeb3;">
