--- a/CodexNaturalis/src/main/resources/fxml/WaitingForPlayers.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/WaitingForPlayers.fxml
@@ -4,16 +4,17 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
-<AnchorPane stylesheets="@../styles.css" styleClass="scene" xmlns="http://javafx.com/javafx/8.0.171"
+<AnchorPane styleClass="scene-dimensions" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/21"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="it.polimi.ingsw.gui.Controller.WaitingForPlayersController">
-    <ImageView fitHeight="800.0" fitWidth="800.0" opacity="0.47" pickOnBounds="true" preserveRatio="true">
+    <ImageView fitHeight="800.0" fitWidth="800.0" styleClass="scene-dimensions">
         <Image url="@../Images/CN_copertina.jpg"/>
     </ImageView>
-    <VBox alignment="CENTER" layoutX="146.0" layoutY="289.0" prefHeight="223.0" prefWidth="504.0">
-        <children>
+    <StackPane styleClass="scene-dimensions">
+        <VBox alignment="CENTER">
             <Label prefHeight="35.0" prefWidth="422.0" text="Waiting for players to join the game">
                 <font>
                     <Font name="Book Antiqua Bold Italic" size="26.0"/>
@@ -44,12 +45,12 @@
                     <Font name="Book Antiqua" size="14.0"/>
                 </font>
             </Label>
-            <Button id="StartGameButton" fx:id="StartGameButton" mnemonicParsing="false" onAction="#handleStartGame"
+            <Button id="StartGameButton" mnemonicParsing="false" onAction="#handleStartGame" styleClass="primary-button"
                     style="-fx-background-color: #a2ecbb;" text="Start game">
                 <font>
-                    <Font name="Book Antiqua Bold Italic" size="15.0"/>
+                    <Font name="Bold Italic" size="15.0"/>
                 </font>
             </Button>
-        </children>
-    </VBox>
+        </VBox>
+    </StackPane>
 </AnchorPane>
