--- a/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
@@ -3,28 +3,41 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox styleClass="scene-dimensions, scene-background" alignment="CENTER" spacing="10"
-      stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.ColorSelectionController">
+
+<VBox alignment="CENTER" spacing="10" styleClass="scene-dimensions, scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.ColorSelectionController">
     <padding>
-        <Insets bottom="10" left="10" right="10" top="10"/>
+        <Insets bottom="10" left="10" right="10" top="10" />
     </padding>
+   <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@../Images/CN_decoration10.png" />
+      </image>
+   </ImageView>
     <Label text="Choose a Color">
         <font>
-            <Font name="Book Antiqua Bold Italic" size="24.0"/>
+            <Font name="Book Antiqua Bold Italic" size="24.0" />
         </font>
     </Label>
     <HBox fx:id="colorContainer" alignment="CENTER" spacing="20">
 
     </HBox>
-    <Label fx:id="messageLabel"/>
-    <Button fx:id="selectColorButton" onAction="#handleSelectColor" style="-fx-background-color: #a2ecbb;"
-            text="Select Color">
+    <Label fx:id="messageLabel">
+      <font>
+         <Font name="Book Antiqua Bold Italic" size="12.0" />
+      </font></Label>
+    <Button fx:id="selectColorButton" onAction="#handleSelectColor" style="-fx-background-color: #a2ecbb;" text="Select Color">
         <font>
-            <Font name="Book Antiqua Bold" size="12.0"/>
+            <Font name="Book Antiqua Bold Italic" size="12.0" />
         </font>
     </Button>
+   <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+      <image>
+         <Image url="@../Images/CN_decoration10.png" />
+      </image>
+   </ImageView>
 </VBox>
