--- a/CodexNaturalis/src/main/resources/fxml/CreateGameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/CreateGameState.fxml
@@ -1,52 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.Integer?>
 <?import javafx.collections.FXCollections?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import java.lang.Integer?>
-<AnchorPane prefHeight="870.0" prefWidth="928.0" styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css"
-            xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="it.polimi.ingsw.gui.Controller.CreateGameMenuController">
+
+<AnchorPane prefHeight="870.0" prefWidth="928.0" styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.CreateGameMenuController">
     <StackPane styleClass="scene-dimensions,scene-background">
+      <ImageView fitHeight="794.0" fitWidth="796.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Images/CN_decoration6.png" />
+         </image>
+      </ImageView>
         <VBox alignment="CENTER" spacing="10">
             <Label text="Create A New Game" textAlignment="JUSTIFY">
                 <font>
-                    <Font name="Book Antiqua Bold Italic" size="36.0"/>
+                    <Font name="Book Antiqua Bold Italic" size="36.0" />
                 </font>
             </Label>
-            <Label fx:id="feedbackLabel" styleClass="normal-label"
-                   text="Select number of players (2-4):"/>
-            <ChoiceBox styleClass="inputs-width" fx:id="playerChoiceBox">
+            <Label fx:id="feedbackLabel" styleClass="normal-label" text="Select number of players (2-4):" />
+            <ChoiceBox fx:id="playerChoiceBox" styleClass="inputs-width">
                 <tooltip>
-                    <Tooltip text="Choose how many players will be in the game"/>
+                    <Tooltip text="Choose how many players will be in the game" />
                 </tooltip>
                 <items>
                     <FXCollections fx:factory="observableArrayList">
-                        <Integer fx:value="2"/>
-                        <Integer fx:value="3"/>
-                        <Integer fx:value="4"/>
+                        <Integer fx:value="2" />
+                        <Integer fx:value="3" />
+                        <Integer fx:value="4" />
                     </FXCollections>
                 </items>
             </ChoiceBox>
-            <Button onAction="#handleCreateGame" style="-fx-background-color: #a2ecbb;"
-                    styleClass="primary-button" text="Create Game">
+            <Button onAction="#handleCreateGame" style="-fx-background-color: #a2ecbb;" styleClass="primary-button" text="Create Game">
             </Button>
 
         </VBox>
 
     </StackPane>
-    <Button onAction="#handleBack" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="10.0"
-            styleClass="primary-button" text="Back"/>
+    <Button onAction="#handleBack" styleClass="primary-button" text="Back" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="10.0" />
     <ImageView fitWidth="607.0" preserveRatio="true" AnchorPane.bottomAnchor="3.0" AnchorPane.rightAnchor="112.0">
-        <Image url="@../Images/CN_Decoration3.png"/>
+        <Image url="@../Images/CN_Decoration3.png" />
     </ImageView>
-    <ImageView fitHeight="150.0" fitWidth="200.0" preserveRatio="true" rotate="180.0" scaleY="-1"
-               AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0">
+    <ImageView fitHeight="150.0" fitWidth="200.0" preserveRatio="true" rotate="180.0" scaleY="-1" AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0">
 
-        <Image url="@../Images/CN_Decoration1.jpg"/>
+        <Image url="@../Images/CN_Decoration1.jpg" />
     </ImageView>
 
 </AnchorPane>
