--- a/CodexNaturalis/src/main/resources/fxml/LobbyMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/LobbyMenuState.fxml
@@ -3,25 +3,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<AnchorPane styleClass="scene-dimensions,scene-background"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-            stylesheets="@../styles.css"
-            fx:controller="it.polimi.ingsw.gui.Controller.LobbyMenuController">
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+
+<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.LobbyMenuController">
     <StackPane styleClass="scene-dimensions,scene-background">
         <VBox alignment="CENTER" spacing="10">
-            <Label prefHeight="75.0" prefWidth="176.0"
-                   style="-fx-font-size: 30px; -fx-font-family: 'Book Antiqua'; -fx-text-fill: #333333;"
-                   text="Lobby Menu"
-                   textAlignment="JUSTIFY"/>
-            <Label prefHeight="21.0" prefWidth="165.0"
-                   style="-fx-font-size: 16px; -fx-font-family: 'Book Antiqua'; -fx-text-fill: #555555;"
-                   text="Please select an option:"/>
+            <Label prefHeight="75.0" prefWidth="176.0" style="-fx-font-size: 30px; -fx-font-family: 'Book Antiqua Bold Italic'; -fx-text-fill: #333333;" text="Lobby Menu" textAlignment="JUSTIFY" />
+            <Label prefHeight="25.0" prefWidth="194.0" style="-fx-font-size: 16px; -fx-font-family: 'Book Antiqua Bold Italic'; -fx-text-fill: #555555;" text="Please select an option:" />
 
-            <Button onAction="#handleCreateGame" styleClass="primary-button" style="-fx-background-color: #a2ecbb;"
-                    text="Create a new game"/>
-            <Button onAction="#handleJoinGame" styleClass="primary-button" style="-fx-background-color: #a6f84b;"
-                    text="Join a game "/>
+            <Button onAction="#handleCreateGame" style="-fx-background-color: #a2ecbb;" styleClass="primary-button" text="Create a new game" />
+            <Button onAction="#handleJoinGame" style="-fx-background-color: #a6f84b;" styleClass="primary-button" text="Join a game " />
         </VBox>
     </StackPane>
     <!-- Top-left Corner -->
